FEM: files organized. tfem folder created

--- a/tfem/CMakeLists.txt
+++ b/tfem/CMakeLists.txt
@@ -16,26 +16,4 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-SET(TESTS
- alphashape01
- linalg01
- mesh01
- serialize
- tree01)
-
-IF(BLITZ_FOUND AND LINALG_FOUND)
-	FOREACH(var ${TESTS})
-		ADD_EXECUTABLE        (${var} "${var}.cpp")
-		ADD_TEST              (${var} ${var})
-		TARGET_LINK_LIBRARIES (${var} ${LIBS})
-		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
-	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND)
-
-IF(BLITZ_FOUND AND LINALG_FOUND)
-	FOREACH(var "tunnel01")
-		ADD_EXECUTABLE        (${var} "${var}.cpp")
-		TARGET_LINK_LIBRARIES (${var} ${LIBS})
-		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
-	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND)
+SUBDIRS (basic coupled diffusion elasticity geotech)
