--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -16,7 +16,7 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-ADD_EXECUTABLE        (basic      basic.cpp)
+ADD_EXECUTABLE        (basic         basic.cpp)
 ADD_EXECUTABLE        (cylinder   cylinder.cpp)
 ADD_EXECUTABLE        (bubble       bubble.cpp)
 ADD_EXECUTABLE        (ball   	      ball.cpp)
@@ -26,6 +26,4 @@ ADD_EXECUTABLE        (multicomp multicomp.cpp)
 ADD_EXECUTABLE        (cap_grain cap_grain.cpp)
 ADD_EXECUTABLE        (capi           capi.cpp)
 ADD_EXECUTABLE        (dam             dam.cpp)
-
-
-
+ADD_EXECUTABLE        (dam_multi dam_multi.cpp)
