--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -26,5 +26,5 @@ ADD_EXECUTABLE        (multicomp multicomp.cpp)
 ADD_EXECUTABLE        (cap_grain cap_grain.cpp)
 ADD_EXECUTABLE        (capi           capi.cpp)
 ADD_EXECUTABLE        (dam             dam.cpp)
-ADD_EXECUTABLE        (dam_multi dam_multi.cpp)
+#ADD_EXECUTABLE        (dam_multi dam_multi.cpp)
 ADD_EXECUTABLE        (porous       porous.cpp)
