CMakeLists.txt updated: for Ubuntu 9.04 and to make compilation (dependencies) of LBM and FEM a bit more independent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,9 +75,13 @@ SET(LIBS  "jrs_triangle")
 SET(LFLAGS "")
 
 IF(PYTHONLIBS_FOUND)
-	INCLUDE_DIRECTORIES   (${PYTHON_INCLUDE_PATH})
+	INCLUDE_DIRECTORIES (${PYTHON_INCLUDE_PATH})
 	EXECUTE_PROCESS (COMMAND python -c "from distutils.sysconfig import get_python_lib; print get_python_lib()" OUTPUT_VARIABLE PYTHON_SITE_PACKAGES OUTPUT_STRIP_TRAILING_WHITESPACE)
-	SET(LIBS ${LIBS} ${PYTHON_LIBRARIES} "boost_python")
+	FIND_LIBRARY (BOOST_PYTHON NAMES boost_python-mt PATHS /usr/lib)
+	IF(NOT BOOST_PYTHON)
+		FIND_LIBRARY (BOOST_PYTHON NAMES boost_python PATHS /usr/lib)
+	ENDIF(NOT BOOST_PYTHON)
+	SET(LIBS ${LIBS} ${PYTHON_LIBRARIES} ${BOOST_PYTHON})
 ENDIF(PYTHONLIBS_FOUND)
 
 IF(Boost_FOUND)
@@ -129,6 +133,7 @@ IF(CGAL_FOUND)
 		SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
 		SET(LIBS  ${LIBS}  "gfortran")
 	ENDIF(GOTOBLAS_FOUND)
+	SET(FLAGS "${FLAGS} -DUSE_CGAL")
 ENDIF(CGAL_FOUND)
 
 IF(FLTK_FOUND)
