--- a/tfem/elasticity/CMakeLists.txt
+++ b/tfem/elasticity/CMakeLists.txt
@@ -24,11 +24,11 @@ SET(TESTS
   tcylin01
   tdiskhole)
 
-IF(BLITZ_FOUND AND LINALG_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
 	FOREACH(var ${TESTS})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		ADD_TEST              (${var} ${var})
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
