--- a/tlbm/CMakeLists.txt
+++ b/tlbm/CMakeLists.txt
@@ -16,16 +16,18 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-ADD_EXECUTABLE        (basic         basic.cpp)
-ADD_EXECUTABLE        (cylinder   cylinder.cpp)
-ADD_EXECUTABLE        (bubble       bubble.cpp)
-ADD_EXECUTABLE        (ball   	      ball.cpp)
-ADD_EXECUTABLE        (drop           drop.cpp)
-ADD_EXECUTABLE        (magnus       magnus.cpp)
-ADD_EXECUTABLE        (multicomp multicomp.cpp)
-ADD_EXECUTABLE        (cap_grain cap_grain.cpp)
-ADD_EXECUTABLE        (capi           capi.cpp)
-ADD_EXECUTABLE        (dam             dam.cpp)
-#ADD_EXECUTABLE        (dam_multi dam_multi.cpp)
-ADD_EXECUTABLE        (porous       porous.cpp)
-ADD_EXECUTABLE        (fracflow     fracflow.cpp)
+IF(BLITZ_FOUND)
+	ADD_EXECUTABLE        (basic         basic.cpp)
+	ADD_EXECUTABLE        (cylinder   cylinder.cpp)
+	ADD_EXECUTABLE        (bubble       bubble.cpp)
+	ADD_EXECUTABLE        (ball   	      ball.cpp)
+	ADD_EXECUTABLE        (drop           drop.cpp)
+	ADD_EXECUTABLE        (magnus       magnus.cpp)
+	ADD_EXECUTABLE        (multicomp multicomp.cpp)
+	ADD_EXECUTABLE        (cap_grain cap_grain.cpp)
+	ADD_EXECUTABLE        (capi           capi.cpp)
+	ADD_EXECUTABLE        (dam             dam.cpp)
+	#ADD_EXECUTABLE        (dam_multi dam_multi.cpp)
+	ADD_EXECUTABLE        (porous       porous.cpp)
+	ADD_EXECUTABLE        (fracflow     fracflow.cpp)
+ENDIF(BLITZ_FOUND)
