--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -17,26 +17,42 @@
 ########################################################################
 
 SET(TESTS
- alphashape01
  confinedflow
  linalg01
  mesh01
  serialize
  tree01)
 
-IF(BLITZ_FOUND AND LINALG_FOUND)
+SET(PROGS_A # Not tests requiring FLTK
+  tunnel01)
+
+SET(PROGS_B # Not tests requiring CGAL
+  alphashape01)
+
+
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
 	FOREACH(var ${TESTS})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		ADD_TEST              (${var} ${var})
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
 
-IF(BLITZ_FOUND AND LINALG_FOUND)
-	FOREACH(var "tunnel01")
+
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
+	FOREACH(var ${PROGS_A})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
+
+
+IF(BLITZ_FOUND AND LINALG_FOUND AND CGAL_FOUND AND Boost_FOUND)
+	FOREACH(var ${PROGS_B})
+		ADD_EXECUTABLE        (${var} "${var}.cpp")
+		TARGET_LINK_LIBRARIES (${var} ${LIBS})
+		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
+	ENDFOREACH(var)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND CGAL_FOUND AND Boost_FOUND)
