--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,17 +16,17 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND AND CGAL_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND)
 	ADD_LIBRARY           (mechsys SHARED mechsys.cpp)
-	TARGET_LINK_LIBRARIES (mechsys ${LIBS} "boost_python")
+	TARGET_LINK_LIBRARIES (mechsys ${LIBS})
 	SET_TARGET_PROPERTIES (mechsys PROPERTIES COMPILE_FLAGS "${FLAGS}")
 	IF(APPLE)
-		INSTALL (FILES libmechsys.dylib DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.so)
+		INSTALL (FILES libmechsys.dylib DESTINATION "${INSTALL_ROOT}${PYTHON_SITE_PACKAGES}" RENAME mechsys.so)
 	ELSE(APPLE)
 		IF(WIN32)
-			INSTALL (FILES libmechsys.dll DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.dll)
+			INSTALL (FILES libmechsys.dll DESTINATION "${INSTALL_ROOT}${PYTHON_SITE_PACKAGES}" RENAME mechsys.dll)
 		ELSE(WIN32)
-			INSTALL (FILES libmechsys.so DESTINATION ${PYTHON_SITE_PACKAGES} RENAME mechsys.so)
+			INSTALL (FILES libmechsys.so DESTINATION "${INSTALL_ROOT}${PYTHON_SITE_PACKAGES}" RENAME mechsys.so)
 		ENDIF(WIN32)
 	ENDIF(APPLE)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND AND CGAL_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND IGRAPH_FOUND AND Boost_FOUND AND PYTHONLIBS_FOUND)
