--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,15 @@ Source: mechsys
 Section: science
 Priority: optional
 Maintainer: Dorival Pedroso <dorival.pedroso@gmail.com>
-Build-Depends: debhelper (>= 6.0), python-central (>= 0.6), python2.5 (>= 2.5), libblitz0-dev, \
- libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev
+Build-Depends: debhelper (>= 7.0), python-central (>= 0.6), python2.6 (>= 2.6), cmake, \
+ libblitz0-dev, libsuitesparse-dev, libboost-python1.37-dev, libigraph-dev, libsuperlu3-dev, gfortran
 Standards-Version: 3.8.0
-XS-Python-Version: >= 2.5
+XS-Python-Version: >= 2.6
 
 Package: mechsys
 Architecture: any
-Depends: ${python:Depends}, ${shlibs:Depends}, blender, paraview, libboost-python-dev, libsuitesparse-dev, libigraph-dev, gfortran, libcgal-dev, libblitz0-dev
+Depends: ${python:Depends}, ${shlibs:Depends}, blender, paraview, \
+ libblitz0-dev, libsuitesparse-dev, libboost-python1.37-dev, libigraph-dev, libsuperlu3-dev, gfortran
 XB-Python-Version: ${python:Versions}
 Description: Open Library for Mechanics
  MechSys is a comprehensive library (through C++ or Python) to the
