--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,7 +30,7 @@ OPTION(MAKE_PYTHON_MODULE "Create python module (mechsys)"                    ON
 OPTION(MAKE_TST           "Compile tests"                                     OFF)
 OPTION(MAKE_TFEM          "Compile FEM tests"                                 OFF)
 OPTION(MAKE_TLBM          "Compile LBM tests"                                 OFF)
-
+OPTION(MAKE_TDEM2D          "Compile DEM2D tests"                             OFF)
 # needed when building Debian package
 IF(NOT INSTALL_ROOT)
 	SET(INSTALL_ROOT /)
@@ -80,6 +80,11 @@ ENDIF(MAKE_TFEM)
 IF(MAKE_TLBM)
 	SET(ALLDIRS ${ALLDIRS} tlbm)
 ENDIF(MAKE_TLBM)
+
+IF(MAKE_TDEM2D)
+	SET(ALLDIRS ${ALLDIRS} tdem2D)
+ENDIF(MAKE_TDEM2D)
+
 
 SUBDIRS(${ALLDIRS})
 
