DEM: New rotation functions for the geometric features. tes3d_04.cpp test those functions.

--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -20,7 +20,8 @@ SET(TESTS
   test2d_01
   test3d_01
   test3d_02
-  test3d_03)
+  test3d_03
+  test3d_04)
 
 IF(BLITZ_FOUND)
 	FOREACH(var ${TESTS})
