--- a/tfem/new_tests/CMakeLists.txt
+++ b/tfem/new_tests/CMakeLists.txt
@@ -16,8 +16,4 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>  #
 ########################################################################
 
-IF(MAKE_TFEM_NEW_ONLY)
-	SUBDIRS (new_tests)
-ELSE(MAKE_TFEM_NEW_ONLY)
-	SUBDIRS (basic coupled diffusion elasticity geotech new_tests)
-ENDIF(MAKE_TFEM_NEW_ONLY)
+SUBDIRS (bhatti_basic)
