--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,9 +103,10 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindCGAL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGSL.cmake)
 
-SET(FLAGS "-DDO_DEBUG")
-SET(LIBS  "jrs_triangle")
+SET(FLAGS  "")
+SET(LIBS   "")
 SET(LFLAGS "")
 
 IF(PYTHONLIBS_FOUND)
@@ -174,3 +175,15 @@ IF(FLTK_FOUND)
 	SET(FLAGS "${FLAGS} ${FLTK_CFLAGS}")
 	SET(LFLAGS "${LFLAGS} ${FLTK_LFLAGS}")
 ENDIF(FLTK_FOUND)
+
+IF(GSL_FOUND)
+	SET(LFLAGS "${LFLAGS} ${GSL_LIBRARIES}")
+ENDIF(GSL_FOUND)
+
+########################################################################### FEM
+
+SET(FEM_FOUND 0)
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
+	SET(FEM_FOUND 1)
+	SET(LIBS  ${LIBS}  "jrs_triangle")
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
