--- a/tfem/new_tests/bhatti_basic/CMakeLists.txt
+++ b/tfem/new_tests/bhatti_basic/CMakeLists.txt
@@ -19,11 +19,11 @@
 SET(TESTS
   ex14)
 
-IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
+IF(FEM_FOUND)
 	FOREACH(var ${TESTS})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		ADD_TEST              (${var} ${var})
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
 	ENDFOREACH(var)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
+ENDIF(FEM_FOUND)
