--- a/tdem/CMakeLists.txt
+++ b/tdem/CMakeLists.txt
@@ -26,5 +26,6 @@ SET(TESTS
 IF(BLITZ_FOUND)
 	FOREACH(var ${TESTS})
 		ADD_EXECUTABLE (${var} "${var}.cpp")
+		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 	ENDFOREACH(var)
 ENDIF(BLITZ_FOUND)
