LinAlg: matvec.h added

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,6 +104,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindCGAL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGSL.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMTL.cmake)
 
 SET(FLAGS  "")
 SET(LIBS   "")
@@ -180,10 +181,14 @@ IF(GSL_FOUND)
 	SET(LIBS ${LIBS} ${GSL_LIBRARIES})
 ENDIF(GSL_FOUND)
 
+IF(MTL_FOUND)
+	INCLUDE_DIRECTORIES(${MTL_INCLUDE_DIRS})
+ENDIF(MTL_FOUND)
+
 ########################################################################### FEM
 
 SET(FEM_FOUND 0)
-IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND)
 	SET(FEM_FOUND 1)
 	SET(LIBS  ${LIBS}  "jrs_triangle")
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND)
