MESH: Unstructured mesh improved (with TetGen). DEM: Generation of particles from tetrahedra seems OK

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,12 +26,12 @@ OPTION(MAKE_ALL_WARNINGS  "Make with all warnings (-Wall)"                    OF
 OPTION(MAKE_DEBUG_SYMBOLS "Make with debug symbols (-g)"                      OFF)
 OPTION(MAKE_PROFILING     "Make with profiling information (-pg)"             OFF)
 OPTION(MAKE_OPTIMIZED     "Make optimized (-O3)"                              ON)
-OPTION(MAKE_PYTHON_MODULE "Create python module (mechsys)"                    ON)
+OPTION(MAKE_PYTHON_MODULE "Create python module (mechsys)"                    OFF)
 OPTION(MAKE_TST           "Compile tests"                                     OFF)
 OPTION(MAKE_TFEM          "Compile FEM tests"                                 OFF)
 OPTION(MAKE_TFEM_NEW_ONLY "Compile new FEM tests only"                        ON)
 OPTION(MAKE_TLBM          "Compile LBM tests"                                 OFF)
-OPTION(MAKE_TDEM          "Compile DEM tests"                                 OFF)
+OPTION(MAKE_TDEM          "Compile DEM tests"                                 ON)
 
 # needed when building Debian package
 IF(NOT INSTALL_ROOT)
@@ -106,6 +106,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGSL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMTL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindVORO.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindTETGEN.cmake)
 
 SET(FLAGS  "")
 SET(LIBS   "")
@@ -185,6 +186,11 @@ ENDIF(GSL_FOUND)
 IF(VORO_FOUND)
 	INCLUDE_DIRECTORIES(${VORO_INCLUDE_DIRS})
 ENDIF(VORO_FOUND)
+
+IF(TETGEN_FOUND)
+	INCLUDE_DIRECTORIES(${TETGEN_INCLUDE_DIRS})
+	SET(LIBS  ${LIBS}  ${TETGEN_LIBRARIES})
+ENDIF(TETGEN_FOUND)
 
 IF(MTL_FOUND)
 	INCLUDE_DIRECTORIES(${MTL_INCLUDE_DIRS})
