--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -33,6 +33,8 @@ SET(PROGS_D # other tests
  serialize
  tree01)
 
+SET(PROGS_F # mesh
+  mesh01)
 
 IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND FLTK_FOUND)
 	FOREACH(var ${PROGS_A})
@@ -69,3 +71,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
+
+IF(TETGEN_FOUND)
+	FOREACH(var ${PROGS_F})
+		ADD_EXECUTABLE        (${var} "${var}.cpp")
+		TARGET_LINK_LIBRARIES (${var} ${LIBS})
+		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
+	ENDFOREACH(var)
+ENDIF(TETGEN_FOUND)
