DEM: compiling part of Voro++ in a library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -185,6 +185,7 @@ ENDIF(GSL_FOUND)
 
 IF(VORO_FOUND)
 	INCLUDE_DIRECTORIES(${VORO_INCLUDE_DIRS})
+	SET(LIBS  ${LIBS}  ${VORO_LIBRARIES})
 ENDIF(VORO_FOUND)
 
 IF(TETGEN_FOUND)
