MESH: JRS' Triangle is now used as an external library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -65,7 +65,7 @@ ADD_DEFINITIONS(-fmessage-length=0) # Each error message will appear on a single
 INCLUDE_DIRECTORIES(${MECHSYS_SOURCE_DIR}/lib/)
 
 # sub-directories
-SET(ALLDIRS lib)
+SET(ALLDIRS)
 
 IF(MAKE_PYTHON_MODULE)
 	SET(ALLDIRS ${ALLDIRS} src)
@@ -106,6 +106,7 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGSL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMTL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindVORO.cmake)
+INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindTRIANGLE.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindTETGEN.cmake)
 
 SET(FLAGS  "")
@@ -188,6 +189,11 @@ IF(VORO_FOUND)
 	SET(LIBS  ${LIBS}  ${VORO_LIBRARIES})
 ENDIF(VORO_FOUND)
 
+IF(TRIANGLE_FOUND)
+	INCLUDE_DIRECTORIES(${TRIANGLE_INCLUDE_DIRS})
+	SET(LIBS  ${LIBS}  ${TRIANGLE_LIBRARIES})
+ENDIF(TRIANGLE_FOUND)
+
 IF(TETGEN_FOUND)
 	INCLUDE_DIRECTORIES(${TETGEN_INCLUDE_DIRS})
 	SET(LIBS  ${LIBS}  ${TETGEN_LIBRARIES})
@@ -200,7 +206,6 @@ ENDIF(MTL_FOUND)
 ########################################################################### FEM
 
 SET(FEM_FOUND 0)
-IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
 	SET(FEM_FOUND 1)
-	SET(LIBS  ${LIBS}  "jrs_triangle")
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
