FEM: HUGE CHANGE: FEM code completely rewritten (from scratch)

--- a/.hgignore
+++ b/.hgignore
@@ -1,73 +1,3 @@
-src/libmechsys.*
-
-tfem/new_tests/bhatti_basic/ex14
-tfem/new_tests/bhatti_basic/ex15
-tfem/new_tests/bhatti_basic/ex16
-tfem/new_tests/bhatti_basic/ex52
-tfem/new_tests/bhatti_basic/ex53
-
-tdem/drawing.py
-tlbm/0165-0001.txt~
-
-tdem/test_distances
-tdem/test_domain
-
-tfem/basic/beam01
-tfem/basic/beam02
-tfem/basic/beam03
-tfem/basic/beam04
-tfem/basic/beam05
-tfem/basic/qnorm2d
-tfem/basic/qnorm3d
-tfem/basic/quad4
-tfem/basic/solid01
-tfem/basic/spring01
-tfem/basic/tri6
-tfem/basic/truss01
-tfem/basic/truss02
-tfem/coupled/biot01
-tfem/coupled/terz01
-tfem/diffusion/confinedflow
-tfem/diffusion/laplace01
-tfem/diffusion/poisson01
-tfem/diffusion/poisson02
-tfem/diffusion/poisson03
-tfem/elasticity/cantilever2d
-tfem/elasticity/cantilever3d
-tfem/elasticity/pstrain01
-tfem/elasticity/pstrain02
-tfem/elasticity/tcylin01
-tfem/elasticity/tdiskhole
-tfem/geotech/camclay01
-tfem/geotech/embank01
-tfem/geotech/embank02
-tfem/geotech/excav01
-tfem/geotech/excav02
-tfem/geotech/triaxial
-
-tst/alphashape01
-tst/linalg01
-tst/linalg02
-tst/serialize
-tst/tree01
-tst/tunnel01
-tst/quadrature
-tst/monte_carlo
-
-tlbm/basic
-tlbm/cap_grain
-tlbm/cylinder
-tlbm/dam
-tlbm/dam_multi
-tlbm/drop
-tlbm/bubble
-tlbm/capi
-tlbm/gravity
-tlbm/ball
-tlbm/magnus
-tlbm/multicomp
-tlbm/porous
-tlbm/fracflow
 
 syntax: glob
 CTestTestfile.cmake
@@ -91,3 +21,9 @@ install_manifest.txt
 *.png
 *.cal
 *.avi
+old_*
+*.res
+*.poly
+*.draw
+*.mpy
+*.mesh
