--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -30,8 +30,7 @@ SET(PROGS_D # other tests
  linalg01
  linalg02
  linsolver
- serialize
- tree01)
+ serialize)
 
 SET(PROGS_F # mesh
   mesh01)
@@ -72,10 +71,11 @@ IF(BLITZ_FOUND AND LINALG_FOUND)
 	ENDFOREACH(var)
 ENDIF(BLITZ_FOUND AND LINALG_FOUND)
 
-IF(TETGEN_FOUND)
+
+IF(TETGEN_FOUND AND TRIANGLE_FOUND)
 	FOREACH(var ${PROGS_F})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}" LINK_FLAGS "${LFLAGS}")
 	ENDFOREACH(var)
-ENDIF(TETGEN_FOUND)
+ENDIF(TETGEN_FOUND AND TRIANGLE_FOUND)
