FEM: Files with Smith-Griffiths examples renamed

--- a/tfem/new_tests/smith_griffiths/CMakeLists.txt
+++ b/tfem/new_tests/smith_griffiths/CMakeLists.txt
@@ -17,11 +17,11 @@
 ########################################################################
 
 SET(TESTS
-    fig52
-    fig511
-    fig515
-    fig517
-    fig524)
+    fig_05_02
+    fig_05_11
+    fig_05_15
+    fig_05_17
+    fig_05_24)
 
 IF(FEM_FOUND)
 	FOREACH(var ${TESTS})
