--- a/tfem/new_tests/nonlinear/CMakeLists.txt
+++ b/tfem/new_tests/nonlinear/CMakeLists.txt
@@ -17,12 +17,12 @@
 ########################################################################
 
 SET(TESTS
-  owen_hinton_01)
+  owen_hinton_01
+  owen_hinton_02)
 
 IF(FEM_FOUND)
 	FOREACH(var ${TESTS})
 		ADD_EXECUTABLE        (${var} "${var}.cpp")
-		ADD_TEST              (${var} ${var})
 		TARGET_LINK_LIBRARIES (${var} ${LIBS})
 		SET_TARGET_PROPERTIES (${var} PROPERTIES COMPILE_FLAGS "${FLAGS}")
 	ENDFOREACH(var)
