--- a/tst/CMakeLists.txt
+++ b/tst/CMakeLists.txt
@@ -20,7 +20,8 @@ SET(PROGS_A # tests requiring FLTK
   tunnel01)
 
 SET(PROGS_B # tests requiring CGAL
-  alphashape01)
+    )
+  #alphashape01)
 
 SET(PROGS_C # tests requiring GSL
   quadrature
