IGRAPH dependency removed

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -100,7 +100,6 @@ INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindUMFPACK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLU.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindSUPERLUD.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindMPICXX.cmake)
-INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindIGRAPH.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindCGAL.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindFLTK.cmake)
 INCLUDE(${MECHSYS_SOURCE_DIR}/Modules/FindGSL.cmake)
@@ -159,10 +158,6 @@ IF(SUPERLUD_FOUND)
 	SET(LIBS   ${LIBS} ${SUPERLUD_LIBRARIES})
 ENDIF(SUPERLUD_FOUND)
 
-IF(IGRAPH_FOUND)
-	SET(LIBS  ${LIBS}  ${IGRAPH_LIBRARIES})
-ENDIF(IGRAPH_FOUND)
-
 IF(CGAL_FOUND)
 	IF(GOTOBLAS_FOUND)
 		SET(LIBS  ${LIBS}  ${CGAL_LIBRARIES})
@@ -206,6 +201,6 @@ ENDIF(MTL_FOUND)
 ########################################################################### FEM
 
 SET(FEM_FOUND 0)
-IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
+IF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
 	SET(FEM_FOUND 1)
-ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND IGRAPH_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
+ENDIF(BLITZ_FOUND AND LINALG_FOUND AND Boost_FOUND AND MTL_FOUND AND TRIANGLE_FOUND AND TETGEN_FOUND)
